# jina-v4-local

./: .gitignore  COMPLETE_JINA_V4_OPTIONS.md  Makefile  README.md  SOLUTION.md  config.py  create_sample_assets.py  fix_mps.py  hello_world.py  jina_v4_complete_guide.py  memory_optimized.py  offline_example.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_setup.py
.github/workflows/: ci.yml  release.yml
docs/: api_reference.md  architecture.md  benchmarks.md  getting_started.md
examples/: hello_world.py  multimodal_search.py  text_similarity.py
src/jina_embeddings/: __init__.py
src/jina_embeddings/config/: __init__.py  settings.py
src/jina_embeddings/core/: __init__.py  embeddings.py  model.py
src/jina_embeddings/utils/: __init__.py  device.py  image.py
tests/: conftest.py
tests/unit/: test_config.py  test_device.py  test_image.py
vllm_examples/: README.md  code_search_example.py  retrieval_example.py  text_matching_example.py
